--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,11 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0”,
-	"sensio/generator-bundle": "^3.0",
+        "twig/twig": "^1.0||^2.0",
+	    "sensio/generator-bundle": "^3.0"
+
+    },
+    "require-dev": {
         "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
